--- a/blogicum/templates/blog/detail.html
+++ b/blogicum/templates/blog/detail.html
@@ -21,12 +21,11 @@
               <p class="text-danger">Выбранная категория снята с публикации админом</p>
             {% endif %}
             {{ post.pub_date|date:"d E Y, H:i" }} | {% if post.location and post.location.is_published %}{{ post.location.name }}{% else %}Планета Земля{% endif %}<br>
-            От автора <a class="text-muted" href="{% url 'blog:profile' post.author.username %}">@{{ post.author.username }}</a> в
+            От автора <a class="text-muted">@{{ post.author.username }}</a> в
             категории {% include "includes/category_link.html" %}
           </small>
         </h6>
         <p class="card-text">{{ post.text|linebreaksbr }}</p>
-        {% if user == post.author %}
           <div class="mb-2">
             <a class="btn btn-sm text-muted" href="{% url 'blog:edit_post' post.id %}" role="button">
               Отредактировать публикацию
@@ -35,8 +34,6 @@
               Удалить публикацию
             </a>
           </div>
-        {% endif %}
-        {% include "includes/comments.html" %}
       </div>
     </div>
   </div>
