--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -3,9 +3,10 @@
   Лента записей
 {% endblock %}
 {% block content %}
-  {% for post in post_list%}
+  {% for post in page_obj %}
     <article class="mb-5">
       {% include "includes/post_card.html" %}
     </article>
   {% endfor %}
+  {% include "includes/paginator.html" %}
 {% endblock %}
